# 2023-langlearn_at_evalita

./: .gitignore  LICENSE  README.md  setup.cfg
data/interim/LangLearn_Test_Data/CItA/: Essays_Test_CItA.xml  ctap.csv
data/interim/LangLearn_Test_Data/CItA/txt/: 2068.txt  2118.txt  2339.txt  2584.txt  2697.txt  2899.txt  3116.txt  3291.txt  3364.txt  3498.txt  3527.txt  3541.txt  3665.txt  3678.txt  3794.txt  3833.txt  3863.txt  3926.txt  3950.txt  3960.txt  3986.txt  4024.txt  4047.txt  4077.txt  4154.txt  4181.txt  4219.txt  4235.txt  4251.txt  4258.txt  4272.txt  4285.txt  4288.txt  4319.txt  4323.txt  4325.txt  4348.txt  4388.txt  4411.txt  4431.txt  (+112 more)
data/interim/LangLearn_Test_Data/COWS-L2H/: Essays_Test_COWS-L2H.xml  ctap.csv
data/interim/LangLearn_Test_Data/COWS-L2H/txt/: 1002.txt  1064.txt  1066.txt  1125.txt  1157.txt  1180.txt  1186.txt  1199.txt  (+405 more)
data/interim/LangLearn_Training_Data/CItA/: Essays_CItA.xml  ctap.csv
data/interim/LangLearn_Training_Data/COWS-L2H/: Essays_COWS-L2H.xml  ctap.csv
data/raw/LangLearn_Test_Data/: README.md
data/raw/LangLearn_Test_Data/CItA/: Essays_Test_CItA.xml  Test_CItA.tsv
data/raw/LangLearn_Test_Data/COWS-L2H/: Essays_Test_COWS-L2H.xml  Test_COWS-L2H.tsv
data/raw/LangLearn_Training_Data/: README.md
data/raw/LangLearn_Training_Data/CItA/: Essays_CItA.xml  Training_CItA.tsv
data/raw/LangLearn_Training_Data/COWS-L2H/: Essays_COWS-L2H.xml  Train_COWS-L2H.tsv
notebooks/: cita.ipynb  cows.ipynb
src/langlearn/: __init__.py
src/langlearn/dataprep/: __main__.py  pipes.py  raw2txt.py  transformers.py  utils.py
(+1992 files in other folders)
