[metadata]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
name = langlearn
description = IAL's LangLearn Things & Stuff for EVALITA'23
long_description = file: README.md
long_description_content_type = text/markdown

version = attr: langlearn.__version__

author = Institute for Applied Linguistics
author_email = appliedlinguisticsdevs@eurac.edu

url = https://gitlab.inf.unibz.it/commul/evalita-2023/langlearn
download_url = https://gitlab.inf.unibz.it/commul/evalita-2023/langlearn


keywords = utility,

license = Apache License 2.0
license_files =
   LICENSE

classifiers =
        Development Status :: 3 - Alpha
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Natural Language :: English
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Topic :: Utilities

[options]
zip_safe = true
python_requires = >= 3.8, < 3.10
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
all = pandas
# test = pytest
